<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.MainActivity">

    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:id="@+id/radioGroup">
        <RadioButton
                android:text="@string/bar_45_pounds"
                android:enabled="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioBtnBar45" android:layout_weight="1"
                android:padding="8dp"/>
        <RadioButton
                android:text="@string/bar_35_pounds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioBtn35" android:layout_weight="1"
                android:padding="8dp"/>
    </RadioGroup>
    <Switch
            android:text="@string/has_45_weights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/has45Weights"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" android:padding="4dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/radioGroup"/>

    <Switch
            android:text="@string/has_25_weights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:id="@+id/has25weights" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/has35weights"
            app:layout_constraintStart_toStartOf="@+id/has45Weights"
    />
    <Switch
            android:text="@string/has_10_weights"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:id="@+id/has10weights" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/has25weights"
            app:layout_constraintStart_toStartOf="@+id/has45Weights"
    />
    <Switch
            android:text="@string/has_35_weights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/has35weights"
            android:padding="4dp"
            app:layout_constraintStart_toStartOf="@+id/has45Weights"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/has45Weights"/>
    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:id="@+id/has5weights" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/has10weights"
            app:layout_constraintStart_toStartOf="@+id/has45Weights"
            android:text="@string/has_5_weights"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="@+id/has10weights"/>
    <Switch
            android:text="@string/has_2_5_weights"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:id="@+id/has2_5_wieghts" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/has5weights"
            app:layout_constraintStart_toStartOf="@+id/has5weights"
    />
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText"
            app:layout_constraintStart_toStartOf="@+id/has45Weights" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/radioGroup" app:layout_constraintHorizontal_bias="0.503"
            android:hint="@string/weight_to_lift_hint" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/has2_5_wieghts"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCalculate" android:text="@string/btn_calculate"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/editText"/>

</android.support.constraint.ConstraintLayout>