<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.PlateBuddyMainActivity">

    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp" android:layout_marginStart="8dp"
            android:layout_marginTop="16dp" android:id="@+id/barWeightRadioGrp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.515">
        <RadioButton
                android:text="@string/bar_45_pounds"
                android:enabled="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/barWeight45RadioBtn" android:layout_weight="1"
                android:padding="8dp" android:checked="true"/>
        <RadioButton
                android:text="@string/bar_35_pounds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/barWeight35RadioBtn" android:layout_weight="1"
                android:padding="8dp"/>
    </RadioGroup>
    <android.support.v7.widget.RecyclerView android:id="@+id/relativeLayoutPlates" android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/barWeightRadioGrp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/weightToLiftEditTxt"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/weightToLiftEditTxt"
            android:hint="@string/weight_to_lift_hint"
            android:inputType="numberDecimal"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="16dp" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toTopOf="@+id/btnCalculate"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCalculate" android:text="@string/btn_calculate"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
    />

</android.support.constraint.ConstraintLayout>